Added depends for two packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Authors@R:
            email = "nirmalya@broadinstitute.org",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Generate probes for PatH-Cap.
+Depends: rtracklayer,
+            Biostrings
 Imports: rtracklayer,
             Biostrings
 License: What license it uses
