--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Authors@R:
            email = "nirmalya@broadinstitute.org",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Generate probes for PatH-Cap.
-Depends: R (>= 3.3.0)
+Depends: R (>= 3.3.0), rtracklayer, 
+            Biostrings
 Imports: rtracklayer,
             Biostrings
 License: What license it uses
